--- a/README
+++ b/README
@@ -81,8 +81,8 @@ Layout
 
  LAYER 3
 ┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
-│ Tab  │      │      │ £    │      │      │      │      │      │      │      │Bckspc│
-│      │      │      │      │      │      │      │      │      │      │      │      │
+│ Tab  │      │      │ £    │      │ Brows│ Brows│ Page │ Page │ Brows│ Brows│Bckspc│
+│      │      │      │      │      │ home │ back │ down │ up   │ forw │ refr │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
 │ Esc  │      │      │ €    │      │      │ Left │ Down │ Up   │ Right│      │      │
 │      │      │      │      │      │      │      │      │      │      │      │      │
