--- a/README
+++ b/README
@@ -42,56 +42,56 @@ Layout
 │ Esc  │ A    │ S    │ D    │ F    │ G    │ H    │ J    │ K    │ L    │ Ö    │ Ä    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Shift│ Z    │ X    │ C    │ V    │ B    │ N    │ M    │ ,    │ .    │ -    │ Enter│
+│ Shift│ Z    │ X    │ C    │ V    │ B    │ N    │ M    │ ,    │ .    │ -    │ Shift│
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
-│ Ctrl │Layer4│ Alt  │ GUI  │Layer3│    Space    │Layer1│Layer2│ GUI  │ Ctrl │ Shift│
+│ Ctrl │Layer4│ Alt  │ GUI  │Layer2│    Space    │Layer1│Layer3│Alt Gr│ GUI  │ Ctrl │
 │      │      │      │      │      │             │      │      │      │      │      │
 └──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
 
  LAYER 1
 ┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
-│ Tab  │ 1    │ 2    │ 3    │ 4    │ 5    │ 6    │ 7    │ 8    │ 9    │ 0    │Bckspc│
+│ ´    │ 1    │ 2    │ 3    │ 4    │ 5    │ 6    │ 7    │ 8    │ 9    │ 0    │ +    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Esc  │ '    │ "    │ `    │      │      │      │      │      │      │      │      │
+│ Esc  │ '    │ "    │ `    │      │ ~    │ /    │      │      │      │ ^    │ *    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Shift│ <    │ >    │ |    │ /    │ ~    │      │ =    │ ;    │ :    │ _    │ Enter│
+│ Shift│      │      │      │      │      │      │      │      │      │      │ Shift│
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
-│ Ctrl │      │ Alt  │ GUI  │      │    Space    │ ▒▒▒▒ │      │ GUI  │ Ctrl │ Shift│
+│ Ctrl │      │ Alt  │ GUI  │      │    Space    │ ▒▒▒▒ │      │Alt Gr│ GUI  │ Ctrl │
 │      │      │      │      │      │             │ ▒▒▒▒ │      │      │      │      │
 └──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
 
  LAYER 2
 ┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
-│ Tab  │ !    │ @    │ #    │ $    │ %    │ &    │ ?    │ /    │ \    │ ^    │Bckspc│
+│ ´    │ 1    │ 2    │ 3    │ 4    │ 5    │ 6    │ 7    │ 8    │ 9    │ 0    │ +    │
+│      │      │      │      │      │      │      │      │      │      │      │      │
+├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
+│ Esc  │ Brows│ Page │ Page │ Brows│ Brows│ Left │ Down │ Up   │ Right│      │ '    │
+│      │ back │ down │ up   │ forw │ refr │      │      │      │      │      │      │
+├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
+│ Shift│      │      │      │      │      │      │      │      │      │      │ Shift│
+│      │      │      │      │      │      │      │      │      │      │      │      │
+├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
+│ Ctrl │      │ Alt  │ GUI  │ ▒▒▒▒ │    Space    │Bckspc│Enter │Alt Gr│ GUI  │ Ctrl │
+│      │      │      │      │ ▒▒▒▒ │             │      │      │      │      │      │
+└──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
+
+ LAYER 3
+┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
+│ Tab  │ +    │ -    │ *    │ /    │ \    │      │      │      │      │      │      │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
 │ Esc  │ (    │ )    │ {    │ }    │ [    │ ]    │      │      │      │      │      │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Shift│ +    │ -    │ *    │ /    │ ~    │      │ =    │ ;    │ :    │ _    │ Enter│
+│ Shift│ <    │ >    │ |    │      │      │      │      │      │      │      │ Shift│
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
-│ Ctrl │      │ Alt  │ GUI  │      │    Space    │      │ ▒▒▒▒ │ GUI  │ Ctrl │ Shift│
+│ Ctrl │      │ Alt  │ GUI  │      │    Space    │      │ ▒▒▒▒ │Alt Gr│ GUI  │ Ctrl │
 │      │      │      │      │      │             │      │ ▒▒▒▒ │      │      │      │
-└──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
-
- LAYER 3
-┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
-│ Tab  │      │      │ £    │      │ Brows│ Brows│ Page │ Page │ Brows│ Brows│Bckspc│
-│      │      │      │      │      │ home │ back │ down │ up   │ forw │ refr │      │
-├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Esc  │      │      │ €    │      │      │ Left │ Down │ Up   │ Right│      │      │
-│      │      │      │      │      │      │      │      │      │      │      │      │
-├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Shift│      │      │      │ /    │ ~    │      │ =    │ ;    │ :    │ _    │ Enter│
-│      │      │      │      │      │      │      │      │      │      │      │      │
-├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
-│ Ctrl │      │ Alt  │ GUI  │ ▒▒▒▒ │    Space    │      │      │ GUI  │ Ctrl │ Shift│
-│      │      │      │      │ ▒▒▒▒ │             │      │      │      │      │      │
 └──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
 
  LAYER 4
@@ -102,9 +102,9 @@ Layout
 │ Esc  │ RGB  │ RGB  │ RGB  │      │      │ Mute │ Vol -│ Vol +│ Bri -│ Bri +│      │
 │      │ Togg │ Mod -│ Mod 0│      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Shift│ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │      │      │ Enter│
+│ Shift│ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │      │      │ Shift│
 │      │ Hue -│ Hue +│ Sat -│ Sat +│ Bri -│ Bri +│ Eff -│ Eff +│      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
-│ Ctrl │ ▒▒▒▒ │ Alt  │ GUI  │      │    Space    │      │      │ GUI  │ Ctrl │ Shift│
+│ Ctrl │ ▒▒▒▒ │ Alt  │ GUI  │      │    Space    │      │      │Alt Gr│ GUI  │ Ctrl │
 │      │ ▒▒▒▒ │      │      │      │             │      │      │      │      │      │
 └──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
