--- a/README
+++ b/README
@@ -36,10 +36,10 @@ Layout
 
  DEFAULT
 ┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
-│ Tab  │ Q    │ W    │ E    │ R    │ T    │ Y    │ U    │ I    │ O    │ P    │ Å    │
+│ Esc  │ Q    │ W    │ E    │ R    │ T    │ Y    │ U    │ I    │ O    │ P    │ Å    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Esc  │ A    │ S    │ D    │ F    │ G    │ H    │ J    │ K    │ L    │ Ö    │ Ä    │
+│ Tab  │ A    │ S    │ D    │ F    │ G    │ H    │ J    │ K    │ L    │ Ö    │ Ä    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
 │ Shift│ Z    │ X    │ C    │ V    │ B    │ N    │ M    │ ,    │ .    │ -    │ Shift│
@@ -54,7 +54,7 @@ Layout
 │ ´    │ 1    │ 2    │ 3    │ 4    │ 5    │ 6    │ 7    │ 8    │ 9    │ 0    │ +    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Esc  │ '    │ "    │ `    │      │ ~    │ /    │      │      │      │ ^    │ *    │
+│ Tab  │ '    │ "    │ `    │      │ ~    │ /    │      │      │      │ ^    │ *    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
 │ Shift│      │      │      │      │      │      │      │      │      │      │ Shift│
@@ -69,7 +69,7 @@ Layout
 │ ´    │ 1    │ 2    │ 3    │ 4    │ 5    │ 6    │ 7    │ 8    │ 9    │ 0    │ +    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Esc  │ Brows│ Page │ Page │ Brows│ Brows│ Left │ Down │ Up   │ Right│      │ '    │
+│ Tab  │ Brows│ Page │ Page │ Brows│ Brows│ Left │ Down │ Up   │ Right│      │ '    │
 │      │ back │ down │ up   │ forw │ refr │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
 │ Shift│      │      │      │      │      │      │      │      │      │      │ Shift│
@@ -81,10 +81,10 @@ Layout
 
  LAYER 3
 ┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
-│ Tab  │ +    │ -    │ *    │ /    │ \    │      │      │      │      │      │      │
+│ Esc  │ +    │ -    │ *    │ /    │ \    │      │      │      │      │      │      │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Esc  │ (    │ )    │ {    │ }    │ [    │ ]    │      │      │      │      │      │
+│ Tab  │ (    │ )    │ {    │ }    │ [    │ ]    │      │      │      │      │      │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
 │ Shift│ <    │ >    │ |    │      │      │      │      │      │      │      │ Shift│
@@ -99,10 +99,10 @@ Layout
 │ F1   │ F2   │ F3   │ F4   │ F5   │ F6   │ F7   │ F8   │ F9   │ F10  │ F11  │ F12  │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Esc  │ RGB  │ RGB  │ RGB  │      │      │ Mute │ Vol -│ Vol +│ Bri -│ Bri +│      │
+│ Tab  │ RGB  │ RGB  │ RGB  │      │      │ Mute │ Vol -│ Vol +│ Bri -│ Bri +│      │
 │      │ Togg │ Mod -│ Mod 0│      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Shift│ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │      │      │ Shift│
+│ Shift│ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │AGnorm│AGswap│ Shift│
 │      │ Hue -│ Hue +│ Sat -│ Sat +│ Bri -│ Bri +│ Eff -│ Eff +│      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
 │ Ctrl │ ▒▒▒▒ │ Alt  │ GUI  │      │    Space    │      │      │Alt Gr│ GUI  │ Ctrl │
