--- a/README
+++ b/README
@@ -34,7 +34,7 @@ Reset the keyboard, then flash it.
 Layout
 ------
 
- DEFAULT
+DEFAULT
 ┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
 │ Esc  │ Q    │ W    │ E    │ R    │ T    │ Y    │ U    │ I    │ O    │ P    │ Å    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
@@ -45,56 +45,56 @@ Layout
 │ Shift│ Z    │ X    │ C    │ V    │ B    │ N    │ M    │ ,    │ .    │ -    │ Shift│
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
-│ Ctrl │Layer4│ Alt  │ GUI  │Layer2│    Space    │Layer1│Layer3│Alt Gr│ GUI  │ Ctrl │
+│ Ctrl │Layer4│ Alt  │ GUI  │Layer1│    Space    │Layer2│Layer3│Alt Gr│ Caps │ Ctrl │
 │      │      │      │      │      │             │      │      │      │      │      │
 └──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
 
- LAYER 1
+LAYER 1
 ┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
-│ ´    │ 1    │ 2    │ 3    │ 4    │ 5    │ 6    │ 7    │ 8    │ 9    │ 0    │ +    │
+│Insert│ !    │ "    │ #    │ ¤    │ %    │ &    │ /    │ (    │ )    │ =    │ ?    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Tab  │ '    │ "    │ `    │      │ ~    │ /    │      │      │      │ ^    │ *    │
-│      │      │      │      │      │      │      │      │      │      │      │      │
-├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Shift│      │      │      │      │      │      │      │      │      │      │ Shift│
-│      │      │      │      │      │      │      │      │      │      │      │      │
-├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
-│ Ctrl │      │ Alt  │ GUI  │      │    Space    │ ▒▒▒▒ │      │Alt Gr│ GUI  │ Ctrl │
-│      │      │      │      │      │             │ ▒▒▒▒ │      │      │      │      │
-└──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
-
- LAYER 2
-┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
-│ ´    │ 1    │ 2    │ 3    │ 4    │ 5    │ 6    │ 7    │ 8    │ 9    │ 0    │ +    │
-│      │      │      │      │      │      │      │      │      │      │      │      │
-├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Tab  │ Brows│ Page │ Page │ Brows│ Brows│ Left │ Down │ Up   │ Right│      │ '    │
+│Delete│ Brows│ Page │ Page │ Brows│ Brows│ Left │ Down │ Up   │ Right│ Home │ End  │
 │      │ back │ down │ up   │ forw │ refr │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Shift│      │      │      │      │      │      │      │      │      │      │ Shift│
+│ Shift│ [    │ ]    │ {    │ }    │      │      │      │      │      │      │ Shift│
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
-│ Ctrl │      │ Alt  │ GUI  │ ▒▒▒▒ │    Space    │Bckspc│Enter │Alt Gr│ GUI  │ Ctrl │
+│ Ctrl │      │ Alt  │ GUI  │ ▒▒▒▒ │    Space    │Bckspc│ Enter│Alt Gr│ Caps │ Ctrl │
 │      │      │      │      │ ▒▒▒▒ │             │      │      │      │      │      │
 └──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
 
- LAYER 3
+LAYER 2
 ┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
-│ Esc  │ +    │ -    │ *    │ /    │ \    │      │      │      │      │      │      │
+│Insert│ 1    │ 2    │ 3    │ 4    │ 5    │ 6    │ 7    │ 8    │ 9    │ 0    │ +    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
-│ Tab  │ (    │ )    │ {    │ }    │ [    │ ]    │      │      │      │      │      │
+│Delete│ '    │ "    │ `    │ ´    │ ~    │ /    │ \    │      │      │ ^    │ *    │
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
 │ Shift│ <    │ >    │ |    │      │      │      │      │      │      │      │ Shift│
 │      │      │      │      │      │      │      │      │      │      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
-│ Ctrl │      │ Alt  │ GUI  │      │    Space    │      │ ▒▒▒▒ │Alt Gr│ GUI  │ Ctrl │
+│ Ctrl │      │ Alt  │ GUI  │      │    Space    │ ▒▒▒▒ │      │Alt Gr│ Caps │ Ctrl │
+│      │      │      │      │      │             │ ▒▒▒▒ │      │      │      │      │
+└──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
+
+LAYER 3
+┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
+│Insert│ ¡    │ @    │ £    │ $    │ €    │ ¥    │ {    │ [    │ ]    │ }    │ \    │
+│      │      │      │      │      │      │      │      │      │      │      │      │
+├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
+│Delete│      │      │ €    │      │      │      │      │      │      │      │      │
+│      │      │      │      │      │      │      │      │      │      │      │      │
+├──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┼──────┤
+│ Shift│      │      │      │      │      │      │      │      │      │      │ Shift│
+│      │      │      │      │      │      │      │      │      │      │      │      │
+├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
+│ Ctrl │      │ Alt  │ GUI  │      │    Space    │      │ ▒▒▒▒ │Alt Gr│ Caps │ Ctrl │
 │      │      │      │      │      │             │      │ ▒▒▒▒ │      │      │      │
 └──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
 
- LAYER 4
+LAYER 4
 ┌──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┬──────┐
 │ F1   │ F2   │ F3   │ F4   │ F5   │ F6   │ F7   │ F8   │ F9   │ F10  │ F11  │ F12  │
 │      │      │      │      │      │      │      │      │      │      │      │      │
@@ -105,6 +105,6 @@ Layout
 │ Shift│ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │ RGB  │AGnorm│AGswap│ Shift│
 │      │ Hue -│ Hue +│ Sat -│ Sat +│ Bri -│ Bri +│ Eff -│ Eff +│      │      │      │
 ├──────┼──────┼──────┼──────┼──────┼──────┴──────┼──────┼──────┼──────┼──────┼──────┤
-│ Ctrl │ ▒▒▒▒ │ Alt  │ GUI  │      │    Space    │      │      │Alt Gr│ GUI  │ Ctrl │
+│ Ctrl │ ▒▒▒▒ │ Alt  │ GUI  │      │    Space    │      │      │Alt Gr│ Caps │ Ctrl │
 │      │ ▒▒▒▒ │      │      │      │             │      │      │      │      │      │
 └──────┴──────┴──────┴──────┴──────┴─────────────┴──────┴──────┴──────┴──────┴──────┘
